1) In DocumentViewer: I did rearrange some of the data members for PrintData and PrintObject and their initialization order 2) In DocumentViewer: Implemented the shrink to fit feature by calc'ing the ratios in the first reflow and then reflowing a second time to shrink them 3) In nsPageFrame: This is somewhat unrelated to this bug, but I found where continuing frame content was being parented to the PageFrame instead of the PageContentFrame. 4) Although at this time I am not using DumpFrames for debugging I may want to switch back to it while debugging at anytime. Bug 100967 r=dcone sr=attinasi